syntax = "proto3";

package com.lightbend.farmtrust.farmland.action;

import "akkaserverless/annotations.proto";
import "farm_land/farm_land_domain.proto";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";
import "common/topic/farm_land_topic_message.proto";

option java_outer_classname = "FarmLandSubscribeTopic";

service FarmLandSubscribeService {
  rpc SubscribeFarmItemEvent(google.protobuf.Any) returns (google.protobuf.Empty) {
    option (akkaserverless.method).eventing.in = {
      topic: "farm-item-events"
    };
  }

}